2009-09-01  Satoshi Konno <skonno@cybergarage.org>
	Added cg_soap_response_getstatuscode().
	Added cg_upnp_event_notify_response_getstatuscode().

2009-08-27  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_argument_setfloatvalue() and cg_upnp_argument_getfloatvalue().
	* Added cg_upnp_argument_setdoublevalue() and cg_upnp_argument_getdoublevalue().
	* Added cg_string_getfloatvalue() and cg_string_getdoublevalue().
	* Added cg_float2str() and cg_double2str().
	* Added cg_str2float() and cg_str2double().
	* Added cg_upnp_device_gethttpserverlist() and cg_upnp_device_getssdpserverlist().
	* Added cg_http_server_getsocket().
	* Added CGUpnpDevice::isRunning().

2009-06-01  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_dictionary_*();
	* Added cg_net_uri_getquerydictionary().
	* Fixed a buffer overrun of cg_xml_escapechars().
	* Changed cg_socket_setid() not to raise SIGPIPE on iPhone.
	
2009-05-28  Satoshi Konno <skonno@cybergarage.org>
	* Improved cg_string_*() and cg_list_*() not to abort when the specified string object is NULL.
	* Added cg_upnp_device_getsmallesticonbymimetype().
	* Added cg_upnp_device_addicon().
	* Added CGUpnpDevice:setDeviceType().
	* Added cg_http_request_postdata().
	* Added cg_http_request_postchunkeddata() and cg_http_request_postlastchunk().
	* Added cg_http_request_closesocket().
	* Added cg_upnp_device_isrunning().

2009-04-23  Satoshi Konno <skonno@cybergarage.org>
	* Added DLNA-CP-version in the USER-AGENT HTTP header value as default.

2009-01-29  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_net_uri_rebuild() and cg_net_url_rebuild().
	* Fixed cg_upnp_service_mangleurl() to return correct url using cg_net_uri_rebuild() when a device has URLBase and the service's URL is relative.
	* Changed cg_upnp_controlpoint_parsescservicescpd() to read the service description internally because the some illegal devices, such as MediaLink, don't return the specified service description.
